increase the jest Timeout

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
+    "testTimeout": 60000,
     "setupFilesAfterEnv": [
       "./src/test/setup.ts"
     ]
