--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^6.3.1",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0",
+    "twilio": "^3.77.2",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
