--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.0",
+    "googleapis": "^102.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
+    "nodemailer": "^6.7.5",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0",
+    "redis": "^4.1.0",
     "twilio": "^3.77.2",
     "typescript": "^4.6.3"
   },
@@ -38,6 +41,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/nodemailer": "^6.4.4",
     "@types/passport": "^1.0.7",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/supertest": "^2.0.12",
