--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "start": "node dist/index.js",
     "dev": "ts-node-dev src/index.ts",
     "test": "jest --watchAll --no-cache",
-    "build": "tsc",
-    "postinstall": "tsc && mv -i -v src/public dist/ && rm -v -rf src"
+    "build": "tsc && cp -R src/public dist/",
+    "postinstall": "tsc && cp -R src/public dist/"
   },
   "jest": {
     "preset": "ts-jest",
