--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev": "ts-node-dev src/index.ts",
     "test": "jest --watchAll --no-cache",
     "build": "tsc && cp -R src/public dist/",
-    "postinstall": "tsc && cp -R src/public dist/ && rm -v -rf src"
+    "postinstall": "tsc && cp -R src/public dist/",
+    "heroku-cleanup": "rm -v -rf src"
   },
   "jest": {
     "preset": "ts-jest",
