--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "googleapis": "^102.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.5",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
@@ -49,6 +50,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.4",
     "@types/passport": "^1.0.7",
     "@types/passport-google-oauth20": "^2.0.11",
